--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -3,7 +3,8 @@
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
       <app-search 
-        [data]="films" 
+        [films]="films"
+        [filmsClone]="filmsClone"
         [page]="currentFilmsPage"
         (updateSearchData)="searchData($event)" 
         (updateBtnShowElse)="updateBtn($event)"
