--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -2,13 +2,7 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
-      <app-search 
-        [films]="films"
-        [filmsClone]="filmsClone"
-        [page]="currentFilmsPage"
-        (updateSearchData)="searchData($event)" 
-        (updateBtnShowElse)="updateBtn($event)"
-      ></app-search>
+      <app-search (updateSearchData)="searchData($event)"></app-search>
       <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
