add service and methods

--- a/publisher-subscriber/pub-sub/src/app/publisher/publisher.component.html
+++ b/publisher-subscriber/pub-sub/src/app/publisher/publisher.component.html
@@ -1,3 +1,5 @@
 <p>
   publisher works!
+  <button (click)="incrementCounter()" >Increment ++</button>
+  <button (click)="decrementtCounter()">Decrement --</button>
 </p>
