add methods to service

--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -24,9 +24,7 @@
         </button>
         <ng-template #marked>
           <button mat-icon-button (click)="addToFavorites()" color="accent">
-            <i class="material-icons">
-              favorite
-            </i>
+            <i class="material-icons">favorite</i>
           </button>
         </ng-template>
       </mat-card-actions>
