--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -9,24 +9,29 @@
       <p class="description">
         {{ (film.overview.length > 200) ? (film.overview | slice:0:200) + '...' : (film.overview) }}</p>
       <mat-card-actions>
-        <button mat-icon-button>
-          <i class="material-icons">
-            play_arrow
-          </i>
+
+        <button mat-icon-button >
+          <i class="material-icons">bookmark</i>
         </button>
+
+
+
         <button mat-icon-button>
-          <i class="material-icons">
-            menu
-          </i>
+          <i class="material-icons">menu</i>
         </button>
+
+        
+
         <button *ngIf="!film.isFavorite; else marked" mat-icon-button (click)="addToFavorites()">
           <i class="material-icons">favorite</i>
         </button>
+
         <ng-template #marked>
           <button mat-icon-button (click)="addToFavorites()" color="accent">
             <i class="material-icons">favorite</i>
           </button>
         </ng-template>
+
       </mat-card-actions>
     </div>
   </div>
