--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -11,8 +11,16 @@
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
 
   <ng-container *ngIf="visibleContent; else actorsVisible">
-    <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
-      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
+    <app-film-item 
+      class="mb-2em" 
+      fxFlex="30%" 
+      fxFlex.lt-md="45%" 
+      fxFlex.lt-sm="100%" 
+      [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" 
+      (updateListOfBooked)="addFilmToBookmark($event)"
+      *ngFor="let film of films"
+    >
     </app-film-item>
     <ng-container *ngIf="films.length === 0">
       <div class="mb-2em">Поиск фильмов не дал результата.</div>
