--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -9,29 +9,25 @@
       <p class="description">
         {{ (film.overview.length > 200) ? (film.overview | slice:0:200) + '...' : (film.overview) }}</p>
       <mat-card-actions>
-
-        <button mat-icon-button >
+        <button mat-icon-button *ngIf="!film.isBooked; else booked" (click)="addToBooked()">
           <i class="material-icons">bookmark</i>
         </button>
-
-
-
+        <ng-template #booked>
+          <button mat-icon-button (click)="addToBooked()" color="primary">
+            <i class="material-icons">bookmark</i>
+          </button>
+        </ng-template>
         <button mat-icon-button>
           <i class="material-icons">menu</i>
         </button>
-
-        
-
-        <button *ngIf="!film.isFavorite; else marked" mat-icon-button (click)="addToFavorites()">
+        <button mat-icon-button *ngIf="!film.isFavorite; else marked" (click)="addToFavorites()">
           <i class="material-icons">favorite</i>
         </button>
-
         <ng-template #marked>
           <button mat-icon-button (click)="addToFavorites()" color="accent">
             <i class="material-icons">favorite</i>
           </button>
         </ng-template>
-
       </mat-card-actions>
     </div>
   </div>
