--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -21,7 +21,7 @@
           <i class="material-icons">menu</i>
         </button>
         <button mat-icon-button *ngIf="!film.isFavorite; else marked" (click)="addToFavorites()">
-          <i class="material-icons">favorite</i>
+          <i class="material-icons">favorite_border</i>
         </button>
         <ng-template #marked>
           <button mat-icon-button (click)="addToFavorites()" color="accent">
