add route path for actor

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -1,13 +1,14 @@
-<mat-toolbar color="primary">
+<mat-toolbar>
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <span>Film Catalog</span>
+    <div class="logo-wrapp">
+      <img src="assets/logo.svg" alt="">
+    </div>
     <div>
       <a 
         mat-button 
         *ngFor="let link of links" 
         [routerLink]="link.path" 
-        [routerLinkActive]="link.active">
-        <mat-icon class="icon">{{link.icon}}</mat-icon>
+        [routerLinkActive]="link.active">       
         <span class="nav">{{link.label}}</span>
       </a>
     </div>
