--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -2,14 +2,26 @@
     margin-left: 5px;
 }
 
-.example-icon {
-  padding: 0 5px;
-}
+
 
 .example-spacer {
   flex: 1 1 auto;
 }
 
+.mat-button {
+  font-weight: 300;
+}
+
 .button-active {
-  color: red;
+  font-weight: 600;
+}
+
+.logo-wrapp {
+  height: 100%;
+  width: 50px;
+  display: flex;
+  img {
+    width: 100%;
+    margin: auto;
+  }
 }
