add new logo and change style on header

--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .nav {
-    margin-left: 5px;
+    // margin-left: 5px;    
 }
 
 
@@ -9,11 +9,11 @@
 }
 
 .mat-button {
-  font-weight: 300;
+  font-weight: 300;  
 }
 
 .button-active {
-  font-weight: 600;
+  font-weight: 500;  
 }
 
 .logo-wrapp {
