--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="logo-wrapp">
-      <img src="assets/logo.svg" alt="">
+      <img src="assets/logo.jpg" alt="">
     </div>
     <div>
       <a 
