--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -27,8 +27,9 @@ mat-card {
 }
 
 .mat-toolbar {
-  background: rgb(69, 74, 98);
+  background: rgb(68, 68, 73);
   color: #fff;
+  box-shadow: 0px 1px 10px 0px rgba(68, 68, 73, .5);
 }
 
 .mat-toolbar-row {
@@ -54,7 +55,7 @@ mat-card {
 }
 
 .cards-section::-webkit-scrollbar-thumb {
-  background: rgba(69, 74, 98, .5);
-  outline: 1px solid rgba(69, 74, 98, .2);
+  background: rgba(68, 68, 73, .5);
+  outline: 1px solid rgba(68, 68, 73, .2);
 }
 
