--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -15,7 +15,7 @@
 .cards-section {
   max-width: 100%;
   margin: 0 auto;
-  overflow-y: scroll;
+  overflow-y: overlay;
   height: 93vh;
   overflow-x: hidden;
   padding: 2.5% 10%;
