--- a/practice/src/app/films-catalog/main/main.component.scss
+++ b/practice/src/app/films-catalog/main/main.component.scss
@@ -1,5 +1,34 @@
-.main { 
-    margin: 50px auto;
-    width: 80%;
-    text-align: center;
+
+
+.section-header {
+    margin-bottom: 20px;
+}
+
+
+.mat-card {
+  padding: .5%;
+  margin: 0;
+  height: 280px;
+  div {
+      width: 100%;
+      height: 100%;
+      img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+  }
+}
+
+button {
+    margin: auto 0;
+}
+
+.cards-section {
+  max-width: 100%;
+  margin: 0 auto;
+  overflow-y: overlay;
+  height: 93vh;
+  overflow-x: hidden;
+  padding: 5% 5% 2.5% 5%;
 }
