--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <div class="logo-wrapp">
+    <div class="logo-wrapp" routerLink="/main">
       <img src="assets/logo.jpg" alt="">
     </div>
     <div>
