--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -17,11 +17,14 @@
 }
 
 .logo-wrapp {
-  height: 100%;
+  height: 50px;
   width: 50px;
   display: flex;
+  outline: none;
+  cursor: pointer;
   img {
     width: 100%;
-    margin: auto;
+    height: 100%;
+    object-fit: contain;    
   }
 }
