fix a bit styles

--- a/practice/src/app/films-catalog/main/main.component.html
+++ b/practice/src/app/films-catalog/main/main.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!spiner" class="cards-section" >
 
   <div>
-    <div class="section-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+    <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
       <h2>Популярные фильмы</h2>
       <button mat-raised-button routerLink="/films-list">Посмотреть все фильмы</button>
     </div>
@@ -20,7 +20,7 @@
   </div>
 
     <div>
-      <div class="section-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+      <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <h2>Популярные актеры</h2>
         <button mat-raised-button routerLink="/actors-list">Посмотреть всех актеров</button>
       </div>
