--- a/practice/src/app/films-catalog/main/main.component.scss
+++ b/practice/src/app/films-catalog/main/main.component.scss
@@ -1,8 +1,6 @@
 
 
-.section-header {
-    margin-bottom: 10px;
-}
+
 
 
 .mat-card {
@@ -31,7 +29,8 @@ button {
   height: 93vh;
   overflow-x: hidden;
   padding: 2.5%;
+  padding-top: 5%;
   > div {
-      margin-bottom: 30px;
+      margin-bottom: 40px;
   }
 }
