set up search component in header

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="logo-wrapp" routerLink="/main">
       <img src="assets/logo.jpg" alt="">
-    </div>
+    </div> 
     <div>
       <a 
         mat-button 
@@ -12,6 +12,7 @@
         <span class="nav">{{link.label}}</span>
       </a>
     </div>
+    <app-search></app-search>
   </mat-toolbar-row>
 </mat-toolbar>
 
