--- a/practice/src/app/shared/components/search/search.component.html
+++ b/practice/src/app/shared/components/search/search.component.html
@@ -1,7 +1,6 @@
 <div fxLayout="row wrap">
   <mat-form-field class="search-form-field">
-    <input matInput type="text" placeholder="Поиск" [(ngModel)]="searchValue"
-      (keyup)="changeSearchValue()">
+    <input matInput type="text" placeholder="Что искать?" [(ngModel)]="searchValue">
     <button 
       mat-button 
       matSuffix 
@@ -13,5 +12,5 @@
       <mat-icon>close</mat-icon>
     </button>  
   </mat-form-field>
-  <button mat-flat-button>Поиск</button>
+  <button mat-flat-button (click)="changeSearchValue()">Поиск</button>
 </div>
