--- a/practice/src/app/films-catalog/search-result/search-result.component.html
+++ b/practice/src/app/films-catalog/search-result/search-result.component.html
@@ -1,29 +1,28 @@
 <div *ngIf="!spiner" class="cards-section">
 
-  <div>
+
     <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-      <h2>Результат поиска</h2>
-     
+      <h2>Результат поиска: {{totalResalt}} </h2>     
     </div>
+
     <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-      <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let searchItem of searchItems">
-        <!-- <ng-component *ngIf="searchItem.poster_path; else profile_path"> -->
-          <div class="img-wrapp">
-            <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">
-            <img *ngIf="!searchItem.poster_path" [src]="imgUrl + searchItem.profile_path" alt="">
-          </div>  
-        <!-- </ng-component> -->
-        <!-- <ng-template #profile_path>
-          <div class="img-wrapp">
-            <img src="{{imgUrl + searchItem.profile_path}}" alt="">
-          </div>          
-        </ng-template> -->
-        
+      <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let searchItem of searchItems">       
+        <div class="img-wrapp">
+          <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">
+          <img *ngIf="!searchItem.poster_path" [src]="imgUrl + searchItem.profile_path" alt="">
+        </div>
       </mat-card>
+
+
+      <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+        <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>Показать
+          еще</button>
+      </div>
     </div>
-  </div>
 
 
+
+  
 
 
 
