--- a/practice/src/app/films-catalog/actors-list/actors-list.component.html
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.html
@@ -1,18 +1,15 @@
-<div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
+<div *ngIf="!spiner" class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly"
+  fxLayoutAlign.lt-sm="center">
 
-
-
-
-    <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
+    <app-actor-item class="mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
       *ngFor="let actor of actors">
     </app-actor-item>
 
     <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
       <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>Показать
         еще</button>
-    </div>
- 
+    </div> 
 
 </div>
 
-<!-- <app-spiner *ngIf="spiner"></app-spiner> -->
+<app-spiner *ngIf="spiner"></app-spiner>
