--- a/practice/src/app/films-catalog/search-result/search-result.component.scss
+++ b/practice/src/app/films-catalog/search-result/search-result.component.scss
@@ -28,5 +28,25 @@ button {
     height: 93vh;
     overflow-x: hidden;
     padding: 2.5% 10%;
-
 }
+
+.not-found {
+    height: 100%;
+    .icon {
+        height: 200px;
+        width: 200px;
+        margin-bottom: 20px;
+    }
+}
+
+.not-img {
+    width: 100%;
+    height: 100%;   
+    background: #fdfffa;
+    img {
+        width: 60% !important;
+        height: 60% !important;
+        object-fit: contain !important;
+    }
+}
+
