--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -30,7 +30,9 @@ mat-card {
   font-size: 14px;
   background: rgb(68, 68, 73);
   color: #fff;
-  box-shadow: 0px 1px 10px 0px rgba(68, 68, 73, .5);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
+              0 1px 1px 0 rgba(0, 0, 0, .14),
+              0 1px 3px 0 rgba(0, 0, 0, .12);
 }
 
 .mat-toolbar-row {
