--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -1,5 +1,10 @@
 app-search {
-  margin-left: 50px;
+  margin-left: 35px;
+}
+
+.nav-section {
+  padding-right: 15px;
+  border-right: 1px solid white;
 }
 
 .example-spacer {
@@ -7,12 +12,22 @@ app-search {
 }
 
 .mat-button {
-  font-weight: 300;  
+  margin: 0 5px;
+  font-weight: 400;
+  transition: all 1s;
+  &:hover {
+    background: rgba(253, 255, 250, 0.2);
+    transition: all .5s;
+  }
 }
 
-.button-active {
-  font-weight: 500;  
+
+
+.button-active {  
+  background: rgba(253, 255, 250, 0.1)
 }
+
+
 
 .logo-wrapp {
   height: 50px;
