--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -20,4 +20,6 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<div [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+  <router-outlet #o="outlet"></router-outlet>
+</div>
