--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -1,11 +1,14 @@
 .block {
   /* margin: 5% 0; */
   height: 100%;
+  background: #fff;
 }
 
 .cards {
   display: flex;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);  
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
+              0 1px 1px 0 rgba(0, 0, 0, .14),
+              0 1px 3px 0 rgba(0, 0, 0, .12);
   height: 200px;
 }
 
