--- a/practice/src/app/shared/components/search/search.component.html
+++ b/practice/src/app/shared/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row wrap">
+<div fxLayout="row wrap" *ngIf="true" >
   <mat-form-field class="search-form-field">
     <input matInput type="text" placeholder="Что искать?" [(ngModel)]="searchValue">
     <button 
