--- a/practice/src/app/films-catalog/search-result/search-result.component.scss
+++ b/practice/src/app/films-catalog/search-result/search-result.component.scss
@@ -43,6 +43,8 @@ button {
     width: 100%;
     height: 100%;   
     background: #fdfffa;
+    border: 1px dotted rgb(68, 68, 73);
+    border-radius: 4px;
     img {
         width: 50% !important;
         height: 50% !important;
