--- a/practice/src/app/shared/components/actor-item/actor-item.component.html
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.html
@@ -1,10 +1,10 @@
 <div class='block'>
-  <div class='cards'>
+  <div class='cards' >
     <h2>{{actor.name}}</h2>
-    <div fxLayout="row">
+    <div fxLayout="row" class="img-wrapp">
       <img src="{{imgUrl + actor.profile_path}}" alt="">
     </div>
-    <div class='info'>     
+    <!-- <div class='info'>     
  
       <mat-card-actions>
         <button mat-icon-button>
@@ -22,7 +22,7 @@
         </button>
 
       </mat-card-actions>
-    </div>
+    </div> -->
   </div>
 </div>
 
