--- a/practice/src/app/shared/components/actor-item/actor-item.component.scss
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.scss
@@ -12,8 +12,17 @@ h2 {
 }
 
 .cards {  
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  height: 100%;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
+              0 1px 1px 0 rgba(0, 0, 0, .14),
+              0 1px 3px 0 rgba(0, 0, 0, .12);
+  // height: 100%;
+}
+
+.img-wrapp {
+    padding: 7px;
+    padding-top: 0;
 }
 
 .mat-card-actions {
