--- a/practice/src/app/shared/components/actor-item/actor-item.component.scss
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.scss
@@ -5,10 +5,12 @@ img {
 }
 
 h2 {
-    font-size: 1em;
+    font-size: 12px !important;
     text-align: center;
-    margin: auto;
-    padding: 10px;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .cards {  
@@ -17,10 +19,13 @@ h2 {
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
               0 1px 1px 0 rgba(0, 0, 0, .14),
               0 1px 3px 0 rgba(0, 0, 0, .12);
-  // height: 100%;
+  min-height: 290px;
+  display: flex;
+  flex-direction: column;
 }
 
 .img-wrapp {
+    margin: auto;
     padding: 7px;
     padding-top: 0;
 }
