--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -6,7 +6,11 @@
   overflow-y: overlay;
   height: 93vh;
   overflow-x: hidden;
-  padding: 2.5% 10%;
+  // padding: 2.5% 10%;
+  .cards {
+    margin: 50px auto;
+    max-width: 1100px;
+  }
 }
 
 button { 
