--- a/practice/src/app/films-catalog/actors-list/actors-list.component.scss
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.scss
@@ -4,7 +4,11 @@
   overflow-y: scroll;
   height: 93vh;
   overflow-x: hidden;
-  padding: 2.5% 10%;
+  // padding: 2.5% 10%;
+    .cards {
+      margin: 30px auto;
+      max-width: 1100px;
+    }
 }
 .actor-item {
   // background: #fff; 
