change a bit style of container

--- a/practice/src/app/shared/components/search/search.component.html
+++ b/practice/src/app/shared/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row wrap" *ngIf="true" >
   <mat-form-field class="search-form-field">
-    <input matInput type="text" placeholder="Что искать?" [(ngModel)]="searchValue">
+    <input matInput type="text" [placeholder]="placeholder" [(ngModel)]="searchValue">
     <button 
       mat-button 
       matSuffix 
