--- a/practice/src/app/films-catalog/search-result/search-result.component.html
+++ b/practice/src/app/films-catalog/search-result/search-result.component.html
@@ -7,7 +7,7 @@
       <p>Страница: {{pageCount}} из {{totalPages}}</p>
     </div>
 
-    <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+    <div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
       <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let searchItem of searchItems">       
         <div class="img-wrapp">
           <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
