work with search part for actors and films

--- a/practice/src/app/shared/components/search/search.component.html
+++ b/practice/src/app/shared/components/search/search.component.html
@@ -12,5 +12,5 @@
       <mat-icon>close</mat-icon>
     </button>  
   </mat-form-field>
-  <button mat-flat-button (click)="changeSearchValue()">Поиск</button>
+  <button mat-flat-button (click)="changeSearchValue(); searchValue='';">Поиск</button>
 </div>
