--- a/practice/src/app/films-catalog/search-result/search-result.component.html
+++ b/practice/src/app/films-catalog/search-result/search-result.component.html
@@ -7,7 +7,8 @@
       <p>Страница: {{pageCount}} из {{totalPages}}</p>
     </div>
 
-    <div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
+    <!-- <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
+
       <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let searchItem of searchItems">       
         <div class="img-wrapp">
           <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
@@ -32,9 +33,78 @@
           Показать еще
         </button>
       </div>      
-    </div>
+    </div> -->
+
+    <ng-container *ngIf='searchFor === "movie"'>
+      <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
+
+        <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
+          *ngFor="let searchItem of searchItems">
+          <div class="img-wrapp">
+            <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
+              <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">            
+            </ng-container>
+            <ng-template #notImg>
+              <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
+                <img src="assets/logo.jpg" alt="">
+              </div>
+            </ng-template>
+          </div>
+        </mat-card>
+
+        <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+          <button 
+            mat-raised-button 
+            color="primary" 
+            (click)="nextPage()" 
+            [disabled]='isDisabledActorsBtn'
+          >
+            Показать еще
+          </button>
+        </div> 
+
+      </div>
+    </ng-container>
+
+
+
+
+    <ng-container *ngIf='searchFor === "person"'>
+      <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
+
+        <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
+          *ngFor="let searchItem of searchItems">
+          <div class="img-wrapp">
+            <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
+             <img *ngIf="searchItem.profile_path" [src]="imgUrl + searchItem.profile_path" alt="">
+            </ng-container>
+            <ng-template #notImg>
+              <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
+                <img src="assets/logo.jpg" alt="">
+              </div>
+            </ng-template>
+          </div>
+        </mat-card>
+
+        <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+          <button 
+            mat-raised-button 
+            color="primary" 
+            (click)="nextPage()" 
+            [disabled]='isDisabledActorsBtn'
+          >
+            Показать еще
+          </button>
+        </div> 
+
+      </div>
+    </ng-container>
+    
   
 </ng-container>
+
+
+
 
 <ng-template #emptyRes>
   <div class="not-found" fxLayout="column wrap" fxLayoutAlign="center center">
