--- a/practice/src/app/films-catalog/search-result/search-result.component.scss
+++ b/practice/src/app/films-catalog/search-result/search-result.component.scss
@@ -1,35 +1,10 @@
-.mat-card {
-	padding: .5%;
-	margin: 0;
-	height: 280px;
-    margin: auto;
-	margin-bottom: 20px;
 
-	.img-wrapp {
-		width: 100%;
-		height: 100%;
-
-		img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		}
-  	}
-}
 
 button {
   	margin: auto 0;
 }
 
-.cards-section {
-    box-sizing: border-box;
-    max-width: 100%;
-    margin: 0 auto;
-    overflow-y: overlay;
-    height: 93vh;
-    overflow-x: hidden;
-    padding: 2.5% 10% 20px;
-}
+
 
 .not-found {
     height: 100%;
@@ -52,4 +27,21 @@ button {
         object-fit: contain !important;
     }
 }
+
+
+
+
+.cards-section {
+  max-width: 100%;
+  margin: 0 auto;
+  overflow-y: scroll;
+  height: 93vh;
+  overflow-x: hidden;  
+  .cards {
+    margin: 30px auto;
+    max-width: 1100px;
+  }
+}
+
+
 
