--- a/practice/src/app/shared/components/actor-item/actor-item.component.scss
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.scss
@@ -1,42 +1,50 @@
-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-h2 {
-    font-size: 12px !important;
-    text-align: center;
-    margin: 0 auto;
-    height: 40px;
-    display: flex;
-    align-items: center;
-}
-
 .cards {  
   background: #fff;
   border-radius: 4px;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2),
-              0 1px 1px 0 rgba(0, 0, 0, .14),
-              0 1px 3px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
   min-height: 290px;
   display: flex;
   flex-direction: column;
-}
 
-.img-wrapp {
+  .name {    
+    text-align: center;
+    margin: auto;    
+    height: 40px;
+    display: flex;
+    align-items: center;
+    h2 {
+      font-size: 12px !important;
+    }
+  }
+
+  .img-wrapp {
     margin: auto;
     padding: 7px;
     padding-top: 0;
+    height: 250px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
 
-.mat-card-actions {
-    padding: 2px;
-    margin: 0;
-    text-align: center;
-}
+.not-img {
+  width: 100%;
+  height: 100%;
+  background: #fdfffa;
+  border: 1px solid rgba(68, 68, 73, .1);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.info {
-  text-align: center;
+  img {
+    width: 75% !important;
+    height: 75% !important;
+    object-fit: contain !important;
+  }
 }
 
