--- a/practice/src/app/films-catalog/search-result/search-result.component.html
+++ b/practice/src/app/films-catalog/search-result/search-result.component.html
@@ -1,42 +1,13 @@
 <div *ngIf="!spiner" class="cards-section">
 
-  <ng-container *ngIf="searchItems.length > 0; else emptyRes">     
+  <ng-container *ngIf='searchItems.length; else emptyRes'>
 
-    <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+    <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
       <h2>Результат поиска: {{totalResalt}} </h2>  
       <p>Страница: {{pageCount}} из {{totalPages}}</p>
     </div>
-
-    <!-- <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
-
-      <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let searchItem of searchItems">       
-        <div class="img-wrapp">
-          <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
-            <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">
-            <img *ngIf="!searchItem.poster_path" [src]="imgUrl + searchItem.profile_path" alt="">
-          </ng-container> 
-          <ng-template #notImg>
-            <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
-              <img src="assets/logo.jpg" alt="">
-            </div>            
-          </ng-template>          
-        </div>
-      </mat-card>
-
-      <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-        <button 
-          mat-raised-button 
-          color="primary" 
-          (click)="nextPage()" 
-          [disabled]='isDisabledActorsBtn'
-        >
-          Показать еще
-        </button>
-      </div>      
-    </div> -->
-
-    </ng-container>
-
+    
+<!-- 
     <ng-container *ngIf='searchFor === "movie"'>
       <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
 
@@ -66,55 +37,37 @@
         </div> 
 
       </div>
+    </ng-container> -->
+
+
+
+<div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+
+    <ng-container *ngIf='searchFor === "person"'>      
+        <app-actor-item 
+          class="actor-item mb-2em" 
+          fxFlex="17%" 
+          fxFlex.lt-md="45%" 
+          fxFlex.lt-sm="100%"
+          [data]="actor" 
+          *ngFor="let actor of searchItems">
+        </app-actor-item>     
+    </ng-container>  
+
+    <ng-container *ngIf='searchFor === "movie"'>
+
+
+      
     </ng-container>
 
+    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+      <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabledActorsBtn'>
+        Показать еще
+      </button>
+    </div>
 
-
-
-    <ng-container *ngIf='searchFor === "person"'>
-     
-        <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-
-              <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
-                [data]="actor" *ngFor="let actor of searchItems">
-              </app-actor-item>
-
-        <!-- <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
-          *ngFor="let searchItem of searchItems">
-          <div>
-            <h2>{{searchItem.name}}</h2>
-          </div>
-          <div class="img-wrapp">
-            <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
-             <img *ngIf="searchItem.profile_path" [src]="imgUrl + searchItem.profile_path" alt="">
-            </ng-container>
-            <ng-template #notImg>
-              <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
-                <img src="assets/logo.jpg" alt="">
-              </div>
-            </ng-template>
-          </div>
-        </mat-card> -->
-
-        <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-          <button 
-            mat-raised-button 
-            color="primary" 
-            (click)="nextPage()" 
-            [disabled]='isDisabledActorsBtn'
-          >
-            Показать еще
-          </button>
-        </div> 
-
-      </div>
-    </ng-container>
-    
-  
-
-
-
-
+ </div> 
+</ng-container>
 
 <ng-template #emptyRes>
   <div class="not-found" fxLayout="column wrap" fxLayoutAlign="center center">
