--- a/practice/src/app/films-catalog/search-result/search-result.component.scss
+++ b/practice/src/app/films-catalog/search-result/search-result.component.scss
@@ -17,18 +17,25 @@ button {
 
 
 
-
-
-
 .cards-section {
   max-width: 100%;
   margin: 0 auto;
   overflow-y: scroll;
   height: 93vh;
-  overflow-x: hidden;  
-  .cards {
+  overflow-x: hidden; 
+  .cards-header {
+    padding: 0 32px;
     margin: 30px auto;
     max-width: 1100px;
+  }
+  .cards {
+    padding-right: 32px;
+    justify-content: flex-start !important;
+    margin: 30px auto;
+    max-width: 1100px;
+    .actor-item {
+      margin-left: 32px;
+    }
   }
 }
 
