--- a/practice/src/app/shared/components/actor-item/actor-item.component.html
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.html
@@ -1,26 +1,20 @@
-    <!-- <div class='block'> -->
-      <div class='cards' >
-
-        <div class="name">
-          <h2>{{actor.name}}</h2>
-        </div>
-        
-        <div class="img-wrapp">
-
-          <ng-container *ngIf="actor.profile_path; else notImg">
-            <img src="{{imgUrl + actor.profile_path}}" alt="">
-          </ng-container>
-
-          <ng-template #notImg>
-            <div class="not-img">
-              <img src="assets/logo.jpg" alt="">
-            </div>
-          </ng-template>
-
-        </div>
+<div class='card'>
+  <div class="name">
+    <h2>{{actor.name}}</h2>
+  </div>        
+  <div class="img-wrapp">
+    <ng-container *ngIf="actor.profile_path; else notImg">
+      <img src="{{imgUrl + actor.profile_path}}" alt="">
+    </ng-container>
+    <ng-template #notImg>
+      <div class="not-img">
+        <img src="assets/logo.jpg" alt="">
       </div>
+    </ng-template>
+  </div>
+</div>
 
-    <!-- </div> -->
+
 
 
 
