--- a/practice/src/app/shared/components/actor-item/actor-item.component.scss
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.scss
@@ -1,13 +1,26 @@
-.cards {  
+.card {  
   background: #fff;
   border-radius: 4px;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 
+							0 1px 1px 0 rgba(0, 0, 0, .14), 
+							0 1px 3px 0 rgba(0, 0, 0, .12);
   min-height: 290px;
   display: flex;
   flex-direction: column;
+	transition: all .5s;
+	cursor: pointer;
+
+	&:hover {
+		transition: all .5s;
+		transform: translate(-1px, -1px);
+		box-shadow: 2px 4px 12px 5px rgba(0, 0, 0, .2),
+								4px 6px 12px 0px rgba(0, 0, 0, .14),
+								6px 8px 12px 0px rgba(0, 0, 0, .12);
+	}
 
   .name {    
     text-align: center;
+
     margin: auto;    
     height: 40px;
     display: flex;
@@ -40,9 +53,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  box-sizing: border-box;
   img {
-    width: 75% !important;
+  	width: 75% !important;
     height: 75% !important;
     object-fit: contain !important;
   }
