--- a/practice/src/app/films-catalog/search-result/search-result.component.html
+++ b/practice/src/app/films-catalog/search-result/search-result.component.html
@@ -6,68 +6,65 @@
       <h2>Результат поиска: {{totalResalt}} </h2>  
       <p>Страница: {{pageCount}} из {{totalPages}}</p>
     </div>
-    
-<!-- 
-    <ng-container *ngIf='searchFor === "movie"'>
-      <div fxLayout="row wrap" fxLayoutAlign="center" fxLayoutAlign.lt-sm="center">
 
-        <mat-card class="mb-2em" fxFlex="18%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
-          *ngFor="let searchItem of searchItems">
-          <div class="img-wrapp">
-            <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
-              <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">            
-            </ng-container>
-            <ng-template #notImg>
-              <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
-                <img src="assets/logo.jpg" alt="">
+
+    <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+
+        <ng-container *ngIf='searchFor === "person"'>      
+            <app-actor-item 
+              class="actor-item mb-2em" 
+              fxFlex="17%" 
+              fxFlex.lt-md="45%" 
+              fxFlex.lt-sm="100%"
+              [data]="actor" 
+              *ngFor="let actor of searchItems">
+            </app-actor-item>     
+        </ng-container>  
+
+        <ng-container *ngIf="searchFor === 'movie'">
+          <app-film-item 
+            class="film-item mb-2em" 
+            fxFlex="30.3%" 
+            fxFlex.lt-md="45%"
+            fxFlex.lt-sm="100%" 
+            [data]="film"  
+            (updateListOfFavorite)="addFilmToFavorit($event)"
+            (updateListOfBooked)="addFilmToBookmark($event)"
+            *ngFor="let film of searchItems">
+          </app-film-item>
+        </ng-container>
+        
+        <ng-container *ngIf='searchFor === "multi"'> 
+            <mat-card class="mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
+              *ngFor="let searchItem of searchItems">
+              <div class="img-wrapp">
+                <ng-container *ngIf="searchItem.poster_path || searchItem.profile_path; else notImg">
+                  <img *ngIf="searchItem.poster_path" [src]="imgUrl + searchItem.poster_path" alt="">            
+                </ng-container>
+                <ng-template #notImg>
+                  <div class="not-img" fxLayout="row wrap" fxLayoutAlign="center center">
+                    <img src="assets/logo.jpg" alt="">
+                  </div>
+                </ng-template>
               </div>
-            </ng-template>
-          </div>
-        </mat-card>
+            </mat-card>      
+        </ng-container>
 
-        <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-          <button 
-            mat-raised-button 
-            color="primary" 
-            (click)="nextPage()" 
-            [disabled]='isDisabledActorsBtn'
-          >
-            Показать еще
-          </button>
-        </div> 
-
+      <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+        <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabledActorsBtn'>
+          Показать еще
+        </button>
       </div>
-    </ng-container> -->
+
+
+    </div> 
 
 
 
-<div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-
-    <ng-container *ngIf='searchFor === "person"'>      
-        <app-actor-item 
-          class="actor-item mb-2em" 
-          fxFlex="17%" 
-          fxFlex.lt-md="45%" 
-          fxFlex.lt-sm="100%"
-          [data]="actor" 
-          *ngFor="let actor of searchItems">
-        </app-actor-item>     
-    </ng-container>  
-
-    <ng-container *ngIf='searchFor === "movie"'>
 
 
-      
-    </ng-container>
-
-    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-      <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabledActorsBtn'>
-        Показать еще
-      </button>
-    </div>
-
- </div> 
 </ng-container>
+
 
 <ng-template #emptyRes>
   <div class="not-found" fxLayout="column wrap" fxLayoutAlign="center center">
