--- a/practice/src/app/films-catalog/search-result/search-result.component.scss
+++ b/practice/src/app/films-catalog/search-result/search-result.component.scss
@@ -1,10 +1,10 @@
 
-
-button {
+.btn-section {
+  margin-left: 32px;
+  button {
   	margin: auto 0;
+  }
 }
-
-
 
 .not-found {
     height: 100%;
@@ -13,6 +13,26 @@ button {
         width: 200px;
         margin-bottom: 20px;
     }
+}
+
+
+.mat-card {
+  padding: .5%;
+  margin: 0;
+  height: 280px;
+  margin-left: 32px;
+  margin-bottom: 32px;
+
+  div {
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
 
 
@@ -33,9 +53,28 @@ button {
     justify-content: flex-start !important;
     margin: 30px auto;
     max-width: 1100px;
-    .actor-item {
+    .actor-item,
+    .film-item {
       margin-left: 32px;
     }
+  }
+}
+
+.not-img {
+  width: 100%;
+  height: 100%;
+  background: #fdfffa;
+  border: 1px solid rgba(68, 68, 73, .1);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+
+  img {
+    width: 75% !important;
+    height: 75% !important;
+    object-fit: contain !important;
   }
 }
 
